--- a/package.json
+++ b/package.json
@@ -3,12 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@rive-app/canvas": "^2.21.1",
+    "@rive-app/react-canvas": "^4.14.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.26.2",
+    "react-scripts": "^5.0.1",
+    "rive-react": "^4.14.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
